:sparkles: feat(component): 优化组件

--- a/docs/.vuepress/styles/element-ui/icon.styl
+++ b/docs/.vuepress/styles/element-ui/icon.styl
@@ -9,15 +9,17 @@
   margin: 0 20px;
 }
 
-.page-component .content > ul.icon-list {
+ul.icon-list {
   overflow: hidden;
   list-style: none;
   padding: 0!important;
   border: solid 1px #eaeefb;
   border-radius: 4px;
+  display: flex;
+  flex-wrap: wrap;
 }
 .icon-list li {
-  float: left;
+
   width: 16.66%;
   text-align: center;
   height: 120px;
