--- a/styles/src/index.scss
+++ b/styles/src/index.scss
@@ -16,4 +16,6 @@
 @use 'element-ui/drawer.scss';
 @use 'element-ui/popover.scss';
 @use 'element-ui/select.scss';
+@use 'element-ui/tag.scss';
+@use 'element-ui/tag-group.scss';
 
