--- a/docs/.vuepress/styles/element-ui/tag.styl
+++ b/docs/.vuepress/styles/element-ui/tag.styl
@@ -1,4 +1,11 @@
 .demo-tag {
+  .el-row {
+    margin-bottom: 20px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
   .el-tag + .el-tag {
     margin-left: 10px;
   }
