:bug: fix(component): 输入框支持修改容器宽度

--- a/styles/src/element-ui/select.scss
+++ b/styles/src/element-ui/select.scss
@@ -50,6 +50,20 @@
     color: getCssVar('color-primary');
   }
 
+  @include when(change-size) {
+    .el-input {
+      width: 100%;
+      min-width: 0;
+    }
+  }
+}
+
+.el-input {
+  @include b(select, true) {
+    .el-input__inner {
+      border: 0;
+    }
+  }
 }
 
 .dl-select-dropdown.el-select-dropdown {
